2008-11-16 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Use new DatePicker widget and get rid of gtk.Calendar.
	* src/gui/widgets/datepicker.py: New widget that lets you choose a date from a dropdown calendar.
	* src/gui/widgets/Makefile.am: Added datepicker.py.
	* src/gui/maindialog.py:
	* po/pt_BR.po: Updated the catalog.
	* po/POTFILES.in: Added datepicker.py.
	* po/billreminder.pot: Updated the catalog.

2008-10-23 Og Maciel <ogmaciel@gnome.org>

	* src/gui/aboutdialog.py: Use gnomevfs for url_show method.
	* src/daemon/main.py, src/lib/dal.py, configure.ac: Don't try to import 
	pysqlite2 in python 2.5. Patch by John Millikin (Fixes Bug: #555136).

2008-10-17 Og Maciel <ogmaciel@gnome.org>

	* src/lib/dbus_actions.py: Don't try to cast a dbus.String into an int type, if catId is 'None'.
	 Fixes Bug #556748.

2008-10-13 Og Maciel <ogmaciel@gnome.org>

	* data/Makefile.am: Make sure that gconf schema is installed.

2008-10-01 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/Makefile.am:
	* src/gui/maindialog.py:
	  Removed the searchentry widget as the liststore already has filtering.

2008-09-29 Luiz Armesto <luiz.armesto@gmail.com>

	* src/gui/widgets/timeline.py: Renamed Bullet attribute amount to
	  amountDue, added refresh method to Timeline and minor fixes.
	* src/gui/maindialog.py: Use new timeline widget now.
	* src/lib/actions.py, src/lib/dbus_actions.py, src/daemon/dbus_manager.py: 
	  Added new methods to dbus - get_interval_totals and get_interval_bills.

2008-09-28 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/timeline.py: More keyboard shortcuts added, such as zoom in/out.
	* src/billreminder.py, src/gui/widgets/statusbar.py, src/gui/maindialog.py, src/lib/dialogs.py:
	  Changed "Record" to "Bill" to be consistent with nomenclature (Fixes Bug: 554228).

2008-09-27 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Allow bills to have a null amount. Fixes Bug #551953.